<resources>
    <string name="app_name">Voyage</string>
    <string name="title">Voyage…</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="title_terms"> Usage Policy</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_how_work">How It Works</string>
    <string name="title_about">About</string>
    <string name="title_refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="title_rate_us">Rate Us</string>
    <string name="title_enquiry">Enquiry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">User name</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="title_wallet">Voyage Points</string>
    <string name="app_permission_msg">THIS APP NEEDS SMS, PHONE AND INTERNET PERMISSION TO WORK WITHOUT ANY PROBLEM</string>
    <string name="permission_denied_msg"><![CDATA[YOU HAVE DENIED SOME PERMISSIONS. ALLOW ALL PERMISSION AT [Setting] > [Permissions]]]></string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="setting_msg">Go to Setting</string>
    <string name="attention">Attention</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="app_permission_title">Required Permission</string>

    <string name="prompt_phone">Phone number or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_login">User Login</string>
    <string name="or">OR</string>

    <string name="facebook_app_id">397616371517734</string>
    <string name="fb_login_protocol_scheme">fb397616371517734</string>
    <string name="facebook_login">Continue with Facebook</string>
    <string name="google_login">Continue with Google</string>
    <string name="discover">Discover</string>
    <string name="please_wait">Please wait…</string>
    
    <string name="facebook_error">Socially not connected</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="google_error">Where can i check gmail?</string>
    <string name="test_phone_number">+91–1234567890</string>
    <string name="testMail">abcd@testmail.com</string>
    <string name="phone">Phone</string>
    <string name="user_name_prompt">Your Good Name</string>
    <string name="user_add_prompt">Where do you Live?</string>
    <string name="email">Email</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="email_error">Electronically unreachable</string>
    <string name="phone_error">Can\'t ring you</string>
    <string name="dob">Date of Birth</string>
    <string name="dob_error">Landing date</string>
    <string name="gender">Gender</string>
    <string name="gender_error"> May we know?</string>
    <string name="next">Next</string>
    <string name="user_details">User Details</string>
    <string name="userName">Name</string>
    <string name="address">Address</string>
    <string name="tap_to_fetch_location">Tap to fetch location</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="pin">pin</string>
    <string name="location">Location</string>
    <string name="pick_location">Pick Location</string>
    <string name="location_err_msg">Location not found</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="set_source">Set your starting point</string>
    <string name="set_destination">Set your destination</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="trip_type">Trip type</string>
    <string name="select_trip_details">Select Trip details</string>
    <string name="one_way">One-way</string>
    <string name="both_way">Return</string>
    <string name="other">Other</string>
    <string name="returning">Return on</string>
    <string name="departing">Depart on</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="scroll_time">Select time</string>
    <string name="car_type">Select car type</string>
    <string name="optional">(Optional)</string>
    <string name="sedan">Sedan</string>
    <string name="logout">Logout</string>
    <string name="hatchback">Hatchback</string>
    <string name="suv">SUV</string>
    <string name="coupe">Coupe</string>
    <string name="checkbox">checkbox</string>

    <string name="send_enquiry">Send Enquiry</string>
    <string name="digha">DIGHA</string>
    <string name="mandarmani">MANDARMANI</string>
    <string name="mayapur">MAYAPUR</string>
    <string name="puri">PURI</string>
    <string name="tarapith">TARAPITH</string>
    <string name="siliguri">SILIGURI</string>
    <string name="eco_park">ECO-PARK</string>
    <string name="location_error_title">Location Services Not Active</string>
    <string name="location_error_message">Please enable Location Services and GPS</string>
    <string name="info">Tap or input your desire destination</string>
    <string name="destination_error_msg">Destination Required</string>
    <string name="origin_error_msg">Origin Required</string>
    <string name="origin_destination_error_msg">Origin and Destination Required</string>
    <string name="trip_details">Trip details</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="origin">Origin</string>
    <string name="dest">Dest</string>
    <string name="test_date">02</string>
    <string name="test_month">FEB</string>
    <string name="test_day">Sun</string>
    <string name="test_year">2021</string>
    <string name="test_time">12:00</string>
    <string name="digha_activity_description">Enjoy the exciting water sports</string>
    <string name="digha_nature_description">Experience mesmerizing view</string>
    <string name="dest_family_description">Spend quality times with loved ones</string>
    <string name="dest_expolring_description">Experience the thrill of exploring</string>
    <string name="dest_memories_description">Experience, Enjoy, and bring something to share</string>
    <string name="activity">Activity</string>
    <string name="exciting">Exciting</string>
    <string name="medinipur">Medinipur, WB</string>
    <string name="outdoor_activity">outdoor activity</string>
    <string name="food">Food</string>
    <string name="delicious">Delicious</string>
    <string name="digha_food_description">Enjoy the mouth watering sea food</string>
    <string name="wow">Wow</string>
    <string name="nature">Nature</string>
    <string name="quality">Quality</string>
    <string name="acquaintances">Acquaintances</string>
    <string name="happening">Happening</string>
    <string name="day_outing">Day-outing</string>
    <string name="unforgettable">Unforgettable</string>
    <string name="memories">Memories</string>
    <string name="darjeeling">DARJEELING</string>
    <string name="kolkata">KOLKATA</string>
    <string name="mirik">MIRIK</string>
    <string name="dooars">DOOARS</string>
    <string name="bishnupur">BISHNUPUR</string>
    <string name="sundarban">SUNDARBAN</string>
    <string name="murshidabad">MURSHIDABAD</string>
    <string name="deoghar">DEOGHAR</string>
    <string name="future_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="from_to">～</string>
    <string name="last_week">Last Week</string>
    <string name="status">Status</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="no_event_found">No event Found</string>
    <string name="previous_events">Previous Events</string>
    <string name="recent_events">Recent Events</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>


</resources>