<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/select_trip_details"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/trip_type"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_way" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both_way" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/departing"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:padding="@dimen/dimen_16dp"
                android:text="01.01.2021"
                android:textSize="@dimen/dimen_22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/returning_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/returning"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:padding="@dimen/dimen_16dp"
                android:text="02.01.2021"
                android:textSize="@dimen/dimen_22sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_marginBottom="@dimen/dimen_4dp"
        android:background="@color/blk" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:layout_weight="1"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/scroll_time"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_am"
                    android:layout_width="42dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="@dimen/dimen_4dp"
                    android:background="@drawable/ic_am_on"
                    android:contentDescription="@string/am" />

                <ImageButton
                    android:id="@+id/btn_pm"
                    android:layout_width="42dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="@dimen/dimen_4dp"
                    android:background="@drawable/ic_pm"
                    android:contentDescription="@string/pm" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/customScroll"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            android:fillViewport="true"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

        </HorizontalScrollView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/goNext"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/dimen_8dp"
        android:layout_gravity="bottom|end"
        android:background="@drawable/btn_next_bg"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:contentDescription="@string/next" />

</LinearLayout>