<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/val_splash_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/user_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_splash_icon"
            android:contentDescription="@string/explore" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:autofillHints="@string/prompt_phone"
            android:background="@color/white"
            android:hint="@string/prompt_phone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_8dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:autofillHints="@string/prompt_password"
            android:background="@color/white"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_8dp"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textColor="@color/blk" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_4dp">

            <Button
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/dimen_8dp">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_4dp">

            <Button
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/dimen_8dp">

            </Button>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_gravity=""
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_institution_logo"
                android:contentDescription="@string/explore"
                android:gravity="bottom" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>